# hpxMP

./: .gitignore  CMakeLists.txt  README.md
examples/ompt/: CMakeLists.txt  callback.h  hello_world.c  task_create.c  task_create_callback.h  task_schedule.c  task_schedule_callback.h
src/: CMakeLists.txt  hpx_runtime.cpp  hpx_runtime.h  intel_hpxMP.cpp  intel_hpxMP.h  kmp_atomic.cpp  kmp_atomic.h  loop_schedule.cpp  ompt-internal.h  ompt.h  ompt_hpx-general.cpp
tests/hpx/jacobi_smp/: jacobi_hpx.cpp  jacobi_nonuniform_hpx.cpp  jacobi_omp.cpp
tests/hpx/tests/: exec_ptr_test.cpp
tests/omp/ompt/: CMakeLists.txt  callback.h  hello_world.c
